bk_ida/gccida/g0/setup_save_areas
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/caller-save.c:794:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[i] + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/caller-save.c:795:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[i] + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/caller-save.c:842:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( _DWORD *)&regno_save_mode + 5 * ia + j), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/caller-save.c:853:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( _DWORD *)&regno_save_mode + 5 * ia + 5 * kb + 1), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/setup_save_areas/src/obj/caller-save.o] Error 1
